# caption_tool__aio

./: .gitmodules  CLAUDE.md  INSTALLATION.md  MUSUBI_INTEGRATION.md  TRAINING_FILES_EXAMPLE.md  chat_tool.py  dataset_manager.py  labeling_service.py  main-flet.py  main.py  main_flet_old.py  prd.md  pyproject.toml  requirements.txt  router.py  settings_manager.py  setup_musubi.py  tag_normalizer_tool.py  training_manager.py  translation_service.py  use_gpt.py
services/: chat_service.py  dataset_manager.py  event_bus.py  job_queue.py  labeling_service.py  navigation.py  terminal_service.py
src/config/: config.json
src/tagtragger/: __init__.py
src/tagtragger/config/: __init__.py  constants.py  settings.py
src/tagtragger/core/: __init__.py
src/tagtragger/core/common/: events.py
src/tagtragger/core/dataset/: __init__.py  image_processor.py  manager.py  models.py
src/tagtragger/core/labeling/: __init__.py  ai_client.py  service.py
src/tagtragger/core/training/: __init__.py  manager.py  models.py  qwen_trainer.py
src/tagtragger/core/training/trainers/: musubi_qwen_image.py  musubi_trainer.py  types.py
src/tagtragger/storage/: __init__.py  database.py
src/tagtragger/ui/: __init__.py
src/tagtragger/ui/flet/: __init__.py  app.py  app_old.py
src/tagtragger/ui/flet/components/: __init__.py  dataset_detail_view.py  datasets_view.py  delete_confirm_dialog.py  terminal_service.py  toast_service.py  training_create_view.py  training_view.py
src/tagtragger/ui/flet/services/: chat_service.py  navigation.py
src/tagtragger/utils/: __init__.py  exceptions.py  logger.py  musubi_helper.py  validators.py
test_datasets/: Agudo_River_has_spirit.txt  Akko_Night_Cat_Girl.txt  Alain_New_Hero.txt  Alleyne_Sword_of_Piercing_Sky.txt
trainers/: musubi_qwen_image.py  types.py
views/: dataset_detail_view.py  datasets_view.py  training_detail_view.py  training_list_view.py
views/dialogs/: __init__.py  delete_confirm_dialog.py  toast_service.py
